@@ -11,6 +11,7 @@
      mgp=getOption("oce.mgp"), 
      mar=c(mgp[1],mgp[1]+1,1,1+par("cex")),
      margins.as.image=FALSE,
+     debug=getOption("oce.debug"),
      \dots)}
 
 \arguments{
@@ -38,6 +39,7 @@
   \item{margins.as.image}{boolean, \code{TRUE} to put a wide margin to the
     right of time-series plots, matching the space used up by a palette
     in an \code{\link{imagep}} plot.}
+  \item{debug}{a flag that turns on debugging, if it exceeds 0.}
   \item{\dots}{optional arguments passed to plotting functions.}
 }
 
